--- a/app/external/css/botui-theme-default.css
+++ b/app/external/css/botui-theme-default.css
@@ -13,7 +13,8 @@ img {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    top: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .botui-container {
@@ -70,7 +71,7 @@ img {
     outline: 0;
     border-radius: 0;
     padding: 5px 7px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Open Sans", sanst-serif;
     background-color: transparent;
     color: #ffffff;
     border-bottom: 1px solid #ffffff
